--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -52,10 +52,11 @@
 
  <div class="footer devise-footer">
  <nav class="footer text-center"><p><small> © 2015 <span class="sitename">INQUIRE</span> &nbsp <a href="#">About</a>&nbsp <a href="#">Help</a>&nbsp <a href="#">Terms</a>&nbsp <a href="#">Privacy</a>
-   </div></div>
+   </div>
+   </div>
 
 
-
+</div>
 
 
 </div>
