--- a/app/views/questions/new.js.erb
+++ b/app/views/questions/new.js.erb
@@ -1,1 +1,1 @@
-$('.question-body').html('<%= j render @similar_question %>');
+$('.similarquestion').html('<%= j render "similar", locals:  @similar_question  %>');
