--- a/app/views/layouts/_rightside.html.erb
+++ b/app/views/layouts/_rightside.html.erb
@@ -1,29 +1,54 @@
+<div class="col-lg-3 col-md-3">
 
+  <% if current_user %>
+  <div class="sidebarblock">
+    <h3>People you may Like</h3>
+    <div class="divline"></div>
+    <div class="blocktxt">
 
-   
+      <% @people_to_follows.each do |user| %>
+        <div class="media">
+          <div class="media-left">
+            <%= link_to (image_tag user.avatar.url(:thumb), class:'img-rounded'), user_path(user)  %>
+          </div>
+          <div class="media-body">
+            <p class="media-heading"><%= link_to  (user.fullname? ? user.fullname : user.username), user_path(user) %></p>
+             <div id="follow_form">
+              <% if current_user.following?(user) %>
+                <%= form_for(current_user.relationships.find_by(followed_id: user.id), html: { method: :delete }) do |f| %>
+                  <%= f.submit "Unfollow", class: "btn btn-danger btn-sm" %>
+                <% end %>
+            <% else %>
+                <%= form_for(current_user.relationships.build(followed_id: user.id)) do |f| %>
+                  <div><%= f.hidden_field :followed_id %></div>
+                  <%= f.submit "Follow", class: "btn btn-secondry btn-sm" %>
+                <% end %>
+              <% end %>
+             </div>
+          </div>
+        </div>
 
-<div class="flow">
-     <div>
-     <p><a href="#"><span class="glyphicon glyphicon-bullhorn"></span>&nbspCreate an AD</a></p>
-     <hr>
-     <%=image_tag "safe.jpg", :class => "ads" %>
-     <h5><a>Start Your Worldtells Store</a></h5>
-     <p><small> shopify.com
-       You live in the most connected time thus far. Make some money off it. </small></p>
-   </div>
- </div>
-
-
-   <div class="flow">
-     <div>
-      <p style="text-align: justify"><small> © 2014 Overflow &nbsp <a href="#">About</a>&nbsp <a href="#">Help</a>&nbsp <a href="#">Terms</a>&nbsp <a href="#">Privacy</a>
-        <a href="#">Cookies</a>&nbsp <a href="#">Ads</a>&nbsp <a>infoBrand</a>&nbsp <a href="#">Blog</a>&nbsp <a href="#">Status</a> <a href="#">Apps</a> <a>Jobs</a> <a>Advertise</a>
-        &nbsp<a href="#">Businesses</a>&nbsp  <a href="#">Media</a>&nbsp <a href="#">Developers</a></small></p>
-        <a href="../?mobile=1">Main Site</a>
-     </div>
+      <% end %>
+    </div>
   </div>
+    <% else %>
+    <div class="sidebarblock">
+      <h3>People you may Like</h3>
+      <div class="divline"></div>
+      <div class="blocktxt">
 
-
-
-
-
+        <% User.last(3).each do |user| %>
+          <div class="media">
+            <div class="media-left">
+              <%= link_to (image_tag user.avatar.url(:thumb), class:'img-rounded'), user_path(user)  %>
+            </div>
+            <div class="media-body">
+              <p class="media-heading"><%= link_to  (user.fullname? ? user.fullname : user.username), user_path(user) %></p>
+              <p>Intersted in: <%=  user.categories.map{|a| link_to a.name, a}.join(", ").html_safe %> </p>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    </div>
+    <% end %>
+</div>
