--- a/app/views/layouts/display.html.erb
+++ b/app/views/layouts/display.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title><%= yield :title %> INQUIRE</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+  <%= stylesheet_link_tag    "application", 'https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css', media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 
@@ -24,24 +24,7 @@
 <body>
 <%= render :partial => "layouts/nav" %>
 
-<div class="container">
-  <div class="row clear-top">
-   <div class="col-md-9 border-settings">
-
-<% flash.each do |key, value| %>
-    <div class="<%= flash_class(key) %>">
-      <%= value %>
-    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-
-    </div>
-<% end %>
 <%= yield %>
-   </div>
-   <div class="col-md-3">
-     <%= render :partial => "questions/related_questions" %>
-   </div>
-  </div>
-</div>
 
 
 </body>
