--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -1,36 +1,31 @@
 <!-- POST -->
-<div class="post index-question question-body"  data-question="<%= question.created_at.to_i %>" data-id="<%= question.id %>" >
-  <div class="wrap-ut pull-left">
-    <div class="userinfo pull-left">
+<div class="post index-question question-body row"  data-question="<%= question.created_at.to_i %>" data-id="<%= question.id %>" >
+    <div class="userinfo col-md-3">
       <div class="avatar">
         <%=link_to image_tag(question.user.avatar.url(:thumb)), question.user    %>
         <% if question.user.is_online? %>
             <div class="status green">&nbsp;</div>
         <% end %>
       </div>
-
-      <div class="icons">
-        <p> <i class="fa fa-thumbs-up text-danger"></i> <%=  (question.votes) %></p>
-        <%=link_to question.user.username.titleize, question.user %>
-      </div>
     </div>
-    <div class="posttext pull-left">
-      <h2><%=link_to question.name, question %></h2>
+    <div class="posttext col-md-10">
+     <div class="post-user-infor">
+      <%=link_to question.user.username.titleize, question.user %>,
+       <%= pluralize question.user.followers.count, "follower"  %>
+       <%= question.user.intrest  %>
+     </div>
+      <h2><%=link_to question.name, question, class: "question-title" %></h2>
       <p><%= truncate (strip_tags question.body), length: 150 %></p>
       <%#= raw question.tag_list.map { |t| link_to t, tag_path(t), class:'tags' }.join('') %>
+      <%= link_to  "Upvote | #{question.votes}", vote_question_path(question.id, value: 1), method: "post", remote: true, class: 'btn btn-secondry btn-sm' %>
+      <%= link_to  "Downvote", vote_question_path(question.id, value: -1), method: "post", remote: true %>
+      <span class="post-question-info">
+        <%=link_to (pluralize question.answers_count, "Answer"), question_path(question, anchor: "answers-area")  %>,
+        <%= pluralize question.comments.count, "Comment"  %>,
+        <%= pluralize question.views, "view"  %>
+      </span>
     </div>
     <div class="clearfix"></div>
-  </div>
-  <div class="postinfo pull-left">
-    <div class="comments">
-      <div class="commentbg">
-        <%=  question.answers.count  %>
-        <div class="mark"></div>
-      </div>
-
-    </div>
-    <div class="views"><i class="fa fa-eye"></i> <%=  question.views %></div>
-    <div class="time"><i class="fa fa-clock-o"></i> <%= time_ago_in_words question.created_at %></div>
-  </div>
   <div class="clearfix"></div>
-</div><!-- POST -->
+</div>
+<!-- POST -->
