--- a/app/views/users/_follow.html.erb
+++ b/app/views/users/_follow.html.erb
@@ -1,5 +1,4 @@
 <%= form_for(current_user.relationships.build(followed_id: @user.id), remote: true) do |f| %>
   <div><%= f.hidden_field :followed_id %></div>
-  <%= f.submit "Follow", class: "btn btn-primary btn-lg" %>
+  <%= f.submit "Follow | #{@user.followers.count}", class: "btn btn-secondry btn-sm" %>
 <% end %>
-
