--- a/app/views/users/_unfollow.html.erb
+++ b/app/views/users/_unfollow.html.erb
@@ -1,4 +1,3 @@
 <%= form_for(current_user.relationships.find_by(followed_id: @user.id), remote: true, html: { method: :delete }) do |f| %>
-  <%= f.submit "Unfollow", class: "btn btn-danger btn-lg" %>
+  <%= f.submit "Unfollow | #{@user.followers.count}", class: "btn btn-danger btn-sm" %>
 <% end %>
-
