--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -26,7 +26,7 @@
   <header class="navbar navbar-inverse navbar-fixed-top bs-docs-na" role="banner">
    <div class="container">
      <div class="nav navbar-left">
-       <h3>ONOZOR</h3>
+      <a href="/" class="my-comic"> <h3>ONOZOR</h3> </a>
      </div>
    </div>
  </header>
