--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-1 col-xs-3 col-sm-2 logo "></div>
-      <div class="col-lg-8 col-xs-9 col-sm-5 ">Copyrights 2015</div>
+      <div class="col-lg-8 col-xs-9 col-sm-5 "> &copy; 2015 Onozor, Inc.</div>
       <div class="col-lg-3 col-xs-12 col-sm-5 sociconcent">
         <ul class="socialicons">
           <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
