--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -9,7 +9,7 @@
             <%= f.input :name, placeholder:"Enter Topic Title", input_html: { class: 'form-control' }, label: false  %>
           </div>
             <div>
-             <%= f.association :category, collection: current_user.categories.pluck(:name), input_html: {class: 'form-control'}, label: false, prompt: "Select your Category" %>
+             <%= f.association :category, collection: current_user.categories.pluck(:name, :id), input_html: {class: 'form-control'}, label: false, prompt: "Select your Category" %>
             </div>
           <div>
             <%= f.input :body, input_html: {class: 'form-control', id: 'desc'}, label: false, placeholder:"Description" %>
