--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -37,12 +37,25 @@
      </div>
    </div>
    <div class="col-md-3">
-     <div>
-        <div class="recent">Recent Post<div>
-      <% @related_questions.each do |a| %>
-       <p class="similar"><%= link_to a.name, a  %></p>
-      <% end %>
-    </div>
-   </div>
+     <div class="sidebar_right">
+       <%=link_to user_path(@user), class: "views_on_profile" do %>
+        <h3><span class="users_answers"><%= "Views on #{@user.first_name}'s Answers" %></span></h3>
+        <div class="stat">
+          <span class="total_count">242,902</span>
+          <div class="stat_label is_increase"> Last 30 Days</div>
+        </div>
+        <div class="stat">
+          <span class="total_count">502,102</span>
+          <div class="stat_label">All Time</div>
+        </div>
+       <% end %>
+       <div>
+          <div class="recent">Recent Post</div>
+        <% @related_questions.each do |a| %>
+         <p class="similar"><%= link_to a.name, a  %></p>
+        <% end %>
+      </div>
+     </div>
   </div>
+</div>
 </div>
